tests/rosetta/out/Smalltalk/arithmetic-numbers.out
/tmp/arithmetic-numbers.st:6: parse error, expected ']'
